enhanced all java skills by iterating eval skills with a realistic test input, remove unnecessary and optimize token efficiency